--- a/app/src/main/res/layout/layout_results.xml
+++ b/app/src/main/res/layout/layout_results.xml
@@ -5,7 +5,7 @@
    >
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/quizName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -17,7 +17,7 @@
         android:id="@+id/points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/quizName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="19dp"
         android:layout_weight="2"
